borsh-derive/src/internals/schema/enums/snapshots/borsh_discriminant_false.snap
---
source: borsh-derive/src/internals/schema/enums/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for X {
    fn declaration() -> borsh::schema::Declaration {
        "X".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XA;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XB;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XC;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XD;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XE;
        #[allow(dead_code)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct XF;
        let discriminant_0: u8 = 0u8;
        let discriminant_1: u8 = 1u8;
        let discriminant_2: u8 = 2u8;
        let discriminant_3: u8 = 3u8;
        let discriminant_4: u8 = 4u8;
        let discriminant_5: u8 = 5u8;
        let definition = borsh::schema::Definition::Enum {
            tag_width: 1,
            variants: borsh::__private::maybestd::vec![
                (discriminant_0 as i64, "A".to_string(), < XA as borsh::BorshSchema >
                ::declaration()), (discriminant_1 as i64, "B".to_string(), < XB as
                borsh::BorshSchema > ::declaration()), (discriminant_2 as i64, "C"
                .to_string(), < XC as borsh::BorshSchema > ::declaration()),
                (discriminant_3 as i64, "D".to_string(), < XD as borsh::BorshSchema >
                ::declaration()), (discriminant_4 as i64, "E".to_string(), < XE as
                borsh::BorshSchema > ::declaration()), (discriminant_5 as i64, "F"
                .to_string(), < XF as borsh::BorshSchema > ::declaration())
            ],
        };
        if borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        ) {
            <XA as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <XB as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <XC as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <XD as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <XE as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <XF as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

