borsh-derive/src/internals/schema/enums/snapshots/complex_enum_generics_borsh_skip_tuple_field.snap
---
source: borsh-derive/src/internals/schema/enums/mod.rs
assertion_line: 361
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl<C: Eq, W> borsh::BorshSchema for A<C, W>
where
    W: Hash,
    W: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < W as borsh::BorshSchema > ::declaration()
        ];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        #[allow(dead_code)]
        #[allow(non_camel_case_types)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct A__Bacon;
        #[allow(dead_code)]
        #[allow(non_camel_case_types)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct A__Eggs;
        #[allow(dead_code)]
        #[allow(non_camel_case_types)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct A__Salad<C: Eq>(Tomatoes, #[borsh(skip)] C, Oil);
        #[allow(dead_code)]
        #[allow(non_camel_case_types)]
        #[derive(borsh::BorshSchema)]
        #[borsh(crate = "borsh")]
        struct A__Sausage<W>
        where
            W: Hash,
        {
            wrapper: W,
            filling: Filling,
        }
        <A__Bacon as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <A__Eggs as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <A__Salad<C> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        <A__Sausage<W> as borsh::BorshSchema>::add_definitions_recursively(definitions);
        let definition = borsh::schema::Definition::Enum {
            tag_width: 1,
            variants: borsh::__private::maybestd::vec![
                (u8::from(0u8) as i64, "Bacon".into(), < A__Bacon as borsh::BorshSchema >
                ::declaration()), (u8::from(1u8) as i64, "Eggs".into(), < A__Eggs as
                borsh::BorshSchema > ::declaration()), (u8::from(2u8) as i64, "Salad"
                .into(), < A__Salad < C > as borsh::BorshSchema > ::declaration()),
                (u8::from(3u8) as i64, "Sausage".into(), < A__Sausage < W > as
                borsh::BorshSchema > ::declaration())
            ],
        };
        borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        );
    }
}
